--- a/.github/workflows/cron-sync.yml
+++ b/.github/workflows/cron-sync.yml
@@ -15,7 +15,9 @@ jobs:
           CRON_SECRET: ${{ secrets.CRON_SECRET }}
         run: |
           if [ -n "$CRON_SECRET" ]; then
-            curl -fsS -H "Authorization: Bearer $CRON_SECRET" "$SYNC_URL"
+            curl -fsS --max-time 30 --retry 3 --retry-all-errors --retry-delay 5 \
+              -H "Authorization: Bearer $CRON_SECRET" "$SYNC_URL"
           else
-            curl -fsS "$SYNC_URL"
+            curl -fsS --max-time 30 --retry 3 --retry-all-errors --retry-delay 5 \
+              "$SYNC_URL"
           fi
